--- a/src/views/songs/create.pug
+++ b/src/views/songs/create.pug
@@ -13,7 +13,7 @@ block content
         label(for="artist") Artist
         select#artist.form-control(name="artist" required)
           each author in authors
-            option(value=author.id) #{author.fullname}
+            option(value=author.fullname) #{author.fullname}
 
       .form-group
         label(for="lyrics") Lyrics
