create index detail playlist

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -92,7 +92,9 @@ html(lang="en")
           li.nav-item
             a.nav-link(href="/genres") Genres
           li.nav-item
-            a.nav-link(href="/songs") Songs
+            a.nav-link(href="/musics") Songs
+          li.nav-item
+            a.nav-link(href="/playlists") Playlists
           li.nav-item
             a.nav-link(href="#") Library
 
