--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -130,6 +130,8 @@ html(lang="en")
           li.nav-item
             a.nav-link(href="/musics") Songs
           li.nav-item
+            a.nav-link(href="/playlists") Playlists
+          li.nav-item
             a.nav-link(href="#") Library
           li.nav-item
             #{t('sidebar.vietnamese')}
