--- a/src/views/songs/delete.pug
+++ b/src/views/songs/delete.pug
@@ -1,9 +1,33 @@
 extends ../layout
 
 block content
-  .container(style='background-color: #f8f9fa; color: #1db954; padding: 2rem;')
-    h1= title
-    p Bạn có chắc chắn muốn xóa nhạc "#{song.title}" không?
-    form(action=`/musics/${song.id}?_method=DELETE` method='POST')
-      button(type='submit' class='btn btn-danger') Xóa
-      a(href='/musics' class='btn btn-secondary') Quay lại danh sách
+  .container
+    .row
+      .col-12
+        h1.card-title
+          = title 
+          | &nbsp;
+          b(style="color: #1db954")= song.title
+
+    .row
+      .col-md-6
+        .card
+          img.card-img-top(src=song.imageUrl alt="Song Image")
+          .card-body
+            h2.card-title= song.title
+            p.card-text
+              | Artist: 
+              b= song.artist
+            p.card-text
+              | Lyrics:
+              pre.card-text(style="color: #e5e5e5")= song.lyrics
+      .col-md-6
+        .card
+          .card-body
+            h3= "Listen to the Song"
+            button.btn.btn-primary(type="button" data-toggle="modal" data-target="#audioPlayerModal" onclick=`updateAudioPlayer("${song.url}")`) Play
+
+            p Bạn có chắc chắn muốn xóa nhạc "#{song.title}" không?
+            form(action=`/musics/delete/${song.id}` method='POST')
+              button(type='submit' class='btn btn-danger') Xóa
+              a(href='/musics' class='btn btn-secondary') Quay lại danh sách
