--- a/src/views/songs/detail.pug
+++ b/src/views/songs/detail.pug
@@ -28,4 +28,4 @@ block content
             h3= "More Actions"
             a.btn.btn-primary(href=`/musics/update/${song.id}`) Edit
             a.btn.btn-danger(href=`/musics/delete/${song.id}`) Delete
-            a.btn.btn-success(href='/musics') Author List
+            a.btn.btn-success(href='/musics') Musics
