--- a/src/views/playlists/detail.pug
+++ b/src/views/playlists/detail.pug
@@ -1,6 +1,11 @@
 extends ../layout
 
 block content
+  style.
+    a:hover {
+      text-decoration: underline;
+      color: #1db954;
+    }
   .container(style='background-color: #f8f9fa; color: #1db954; padding: 2rem;')
     h1= playlist.title
     .row
@@ -17,12 +22,29 @@ block content
         p
           strong Created At:
           | #{new Date(playlist.createdAt).toDateString()}
-        p
-          strong Songs:
-          ul
-            each song in playlist.songs
-              li= song.title
+        .mt-4
+          a.btn.btn-primary(href=`/playlists/update/${playlist.id}`) Edit
+          a.btn.btn-danger(href=`/playlists/delete/${playlist.id}`) Delete
+          a.btn.btn-success(href='/playlists') Playlist List
+
+    h1.text-center.mb-4 List of Songs
+    ul.list-group
+      each song in playlist.songs
+        li.list-group-item.d-flex.justify-content-between.align-items-center
+          .d-flex.align-items-center
+            if song.imageUrl
+              img(src=song.imageUrl, alt=song.title, class='rounded-circle', style='width: 50px; height: 50px; object-fit: cover; margin-right: 15px;')
+            else
+              .bg-secondary.text-white.rounded-circle.d-flex.align-items-center.justify-content-center(style='width: 50px; height: 50px; margin-right: 15px;')
+                | No Image
+            .ml-2
+              a(href=`/musics/${song.id}`, class='text-decoration-none text-dark')
+                h5.mb-1= song.title
+              small: = song.artist  
+              | &nbsp;
+              small : #{new Date(song.createdAt).toDateString()}
+          button.btn.btn-primary(type="button" data-toggle="modal" data-target="#audioPlayerModal" onclick=`updateAudioPlayer("${song.url}")`) Play
+
+
     .mt-4
-      a.btn.btn-primary(href=`/playlists/update/${playlist.id}`) Edit
-      a.btn.btn-danger(href=`/playlists/delete/${playlist.id}`) Delete
-      a.btn.btn-success(href='/playlists') Playlist List
+      a.btn.btn-success(href='/musics/create') Add Song
