--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -7,6 +7,7 @@ html(lang="en")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css")
     link(rel="stylesheet", href="/styles/layout_admin.css")
     script(src="/scripts/layout_admin.js")
+    //- script(src="/scripts/layout_playlist.js")
 
   body
     nav.navbar.navbar-dark
