--- a/src/views/playlists/detail.pug
+++ b/src/views/playlists/detail.pug
@@ -32,8 +32,8 @@ block content
 
     h1.text-center.mb-4 List of Songs
     ul.list-group
-      each song in playlist.songs
-        li.list-group-item.d-flex.justify-content-between.align-items-center
+      each song, index in playlist.songs
+        li.list-group-item.d-flex.justify-content-between.align-items-center.playlist-song(data-song-url=song.url)
           .d-flex.align-items-center
             if song.imageUrl
               img(src=song.imageUrl, alt=song.title, class='rounded-circle', style='width: 50px; height: 50px; object-fit: cover; margin-right: 15px;')
@@ -47,7 +47,7 @@ block content
               | &nbsp;
               small : #{new Date(song.createdAt).toDateString()}
           .mt-4
-            button.btn.btn-primary(type="button" data-toggle="modal" data-target="#audioPlayerModal" onclick=`updateAudioPlayer("${song.url}")`) Play
+            button.btn.btn-primary(type="button" data-toggle="modal" data-target="#audioPlayerModal" onclick=`updateAudioPlayer("${song.url}", ${index})`) Play
             form(action=`/playlists/remove-song/${playlist.id}`, method='post', style='display: inline;')
               input(type='hidden', name='songId', value=song.id)
               button.btn.btn-danger(type='submit') Remove
@@ -82,3 +82,8 @@ block content
                   form(action=`/playlists/add-song/${playlist.id}`, method='post', style='display: inline;')
                     input(type='hidden', name='songId', value=song.id)
                     button.btn.btn-success(type='submit') Add
+  
+  if playlist
+    #playlist-data(playlist-datas=playlist)
+  if firstSong
+    #first-song(data-song-url=firstSong.url)
