--- a/src/views/playlists/index.pug
+++ b/src/views/playlists/index.pug
@@ -13,6 +13,7 @@ block content
               .bg-secondary.text-white.rounded-circle.d-flex.align-items-center.justify-content-center(style='width: 50px; height: 50px; margin-right: 15px;')
                 | No Image
             .ml-2
+              button(type='button', class='btn btn-link text-decoration-none text-dark playlist-detail-btn', data-playlist-id=playlist.id) Detail Playlist
               a(href=`/playlists/${playlist.id}`, class='text-decoration-none text-dark')
                 h5.mb-1= playlist.title
               small Type: #{playlist.type} | Created At: #{new Date(playlist.createdAt).toDateString()}
